Unit tests for functions are complete

--- a/projects/lunng/dominion/Makefile
+++ b/projects/lunng/dominion/Makefile
@@ -1,5 +1,13 @@
 CFLAGS= -Wall -fpic -coverage -lm -std=c99
 
+unittests: rngs.o dominion.o
+	gcc -o unittest1 -g  unittest1.c dominion.o rngs.o $(CFLAGS)
+	gcc -o unittest2 -g  unittest2.c dominion.o rngs.o $(CFLAGS)
+	gcc -o unittest3 -g  unittest3.c dominion.o rngs.o $(CFLAGS)
+	gcc -o unittest4 -g  unittest4.c dominion.o rngs.o $(CFLAGS)
+
+
+
 rngs.o: rngs.h rngs.c
 	gcc -c rngs.c -g  $(CFLAGS)
 
